hero section design completed

--- a/index.html
+++ b/index.html
@@ -9,12 +9,38 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Fav Icon Linked here  -->
     <link rel="shortcut icon" href="./assets/bangladesh.png" type="image/x-icon">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
-<body class="font-fire-sans">
+<body class="font-fira-sans website-border">
     <!-- header start from here  -->
     <header>
+        <nav class="nav-container">
+            <div class="nav-menu">
+                <h3>Bangladesh 2.0</h3>
+                <button class="btn-primary">Sign In</button>
+            </div>
+        </nav>
 
+        <!-- hero section -->
+        <section id="hero">
+            <div class="hero-container">
+                <div class="hero-description">
+                    <h4>Bangladesh 2.0</h4>
+                    <h1>Idea , innovation ,<br>
+                        vision and challenges in <br>New Bangladesh.</h1>
+                    <button class="btn-primary">Explore New Bangladesh</button>
+                </div>
+                <div class="hero-img">
+                    <img src="./assets/hero.png" alt="">
+                </div>
+            </div>
+        </section>
     </header>
     <!-- main start from here -->
     <main>
