pillar of bd created successfully

--- a/index.html
+++ b/index.html
@@ -44,7 +44,52 @@
     </header>
     <!-- main start from here -->
     <main>
+        <!-- Pillar of "Bangladesh 2.0" -->
+        <section>
+            <div id="pillar-container">
+                <div class="pillar-heading">
+                    <h2>Pillars of "Bangladesh 2.0"</h2>
+                </div>
+                <div class="pillar-card">
+                    <!-- card 1 -->
+                    <div class="cards">
+                        <img src="./assets/card-icon.png" alt="">
+                        <h4>Innovation</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="cards">
+                        <img src="./assets/card-icon.png" alt="">
+                        <h4>Sustainability</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="cards">
+                        <img src="./assets/card-icon.png" alt="">
+                        <h4>Infrastructure</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                    <!-- card 4 -->
+                    <div class="cards">
+                        <img src="./assets/card-icon.png" alt="">
+                        <h4>Empowerment</h4>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- The Vision of Future -->
+        <section id="vision">
+            <div class="vision-of-future-container">
+                <div class="vision-description"></div>
+                <div class="vision-card">
+                    <div class="cards">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer start from here  -->
     <footer>
