--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section>
             <div id="pillar-container">
                 <div class="pillar-heading">
-                    <h2>Pillars of "Bangladesh 2.0"</h2>
+                    <h2 class="headings">Pillars of "Bangladesh 2.0"</h2>
                 </div>
                 <div class="pillar-card">
                     <!-- card 1 -->
@@ -82,10 +82,38 @@
         <!-- The Vision of Future -->
         <section id="vision">
             <div class="vision-of-future-container">
-                <div class="vision-description"></div>
+                <div class="vision-description">
+                    <h2 class="headings">The Vision of Future</h2>
+                    <p class="paragraph-for-all">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                        cutting-edge technology,
+                        promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                        digital transformation, and robust infrastructure, the country is set to become a global model
+                        of development.</p>
+                </div>
                 <div class="vision-card">
-                    <div class="cards">
-
+                    <!-- card 1 -->
+                    <div class="card-info card-1">
+                        <img src="./assets/card-icon.png" alt="">
+                        <h4>Digital Transformation</h4>
+                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for
+                            all citizens.</p>
+                        <button class="btn-primary btn-sky-learn">Learn More</button>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="card-info card-2">
+                        <img src="./assets/card-icon.png" alt="">
+                        <h4>Digital Transformation</h4>
+                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for
+                            all citizens.</p>
+                        <button class="btn-primary btn-green-learn">Learn More</button>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="card-info card-3">
+                        <img src="./assets/card-icon.png" alt="">
+                        <h4>Digital Transformation</h4>
+                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for
+                            all citizens.</p>
+                        <button class="btn-primary btn-yellow-learn">Learn More</button>
                     </div>
                 </div>
             </div>
