yunus pitch delivered

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <!-- card 2 -->
                     <div class="card-info card-2">
                         <img src="./assets/card-icon.png" alt="">
-                        <h4>Digital Transformation</h4>
+                        <h4>Green Energy</h4>
                         <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for
                             all citizens.</p>
                         <button class="btn-primary btn-green-learn">Learn More</button>
@@ -110,11 +110,33 @@
                     <!-- card 3 -->
                     <div class="card-info card-3">
                         <img src="./assets/card-icon.png" alt="">
-                        <h4>Digital Transformation</h4>
+                        <h4>Modern Infrastructure</h4>
                         <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for
                             all citizens.</p>
                         <button class="btn-primary btn-yellow-learn">Learn More</button>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Dr. Muhammad Yunus pitch -->
+        <section id="yunus">
+            <div class="yunus-container">
+                <div class="yunus-pitch">
+                    <img src="./assets/quote-bg.png" alt="">
+                    <p class="paragraph-for-all over-quote">"Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Facilis quas,
+                        ducimus
+                        labore sequi quos
+                        deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
+                        culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
+                        dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque,
+                        quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
+                        architecto soluta necessitatibus vero?"</p>
+                </div>
+                <div class="yunus-name-designation">
+                    <h3 class="yunus-name">Dr. Muhammad Yunus</h3>
+                    <p class="paragraph-for-all">Chief Adviser of the People's Republic of Bangladesh</p>
                 </div>
             </div>
         </section>
